# RobotRF

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  robot_sorting_rl_plan.md  rrf
docs/: architecture.html  notion_blog_outline.md  notion_blog_strategy.md  notion_blog_template.md  parallel_training_preparation.md  process_log.md  project_roadmap.md  recording_handoff_log.md  recording_handoff_protocol.md  setup_new_machine.md  side_bin_env_3d_preview.html  side_bin_training_commands.md  training_log_guide.md
evals/: FetchSideBinPlace_v0_sac_750000_steps_eval.json  fetch_results.json  smoke_results.json
scripts/: check_runtime.py  check_windows_bootstrap.ps1  evaluate.py  inspect_side_bin_contacts.py  record_video.py  render_robotics_env.py  render_snapshot.py  train.py
skills/rrf-project-ops/: SKILL.md
skills/rrf-project-ops/agents/: openai.yaml
skills/rrf-recording-handoff/: SKILL.md
skills/rrf-recording-handoff/agents/: openai.yaml
skills/token-economy/: SKILL.md
skills/token-economy/agents/: openai.yaml
skills/token-economy/references/: agent-portability.md  repo-comparison.md
src/robot_sorting_rl/: __init__.py  algorithms.py  training.py
src/robot_sorting_rl/envs/: __init__.py  (+2 more)
tests/: check_bootstrap_script.ps1  test_algorithms.py  test_check_runtime_script.py  test_evaluate_results.py  test_project_skills.py  test_record_video.py  test_render_robotics_env_script.py  test_render_snapshot_script.py  test_robotics_training_path.py  test_rrf_cli.py  test_side_bin_place_env.py  test_tabletop_sorting_env.py  test_training_defaults.py
(+1 files in other folders)
