[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-sorting-rl"
version = "0.1.0"
description = "Fetch-style tabletop robot sorting reinforcement learning MVP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=1.2,<1.4",
  "gymnasium-robotics>=1.4.2,<2.0",
  "mujoco>=3.8.1,<4.0",
  "numpy>=1.24,<3.0",
  "stable-baselines3>=2.3,<3.0",
  "torch>=2.2",
  "tensorboard>=2.15",
  "imageio>=2.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "pyyaml>=6.0",
]
wandb = [
  "wandb>=0.17",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
